--- a/app/src/main/res/layout/activity_workout_done.xml
+++ b/app/src/main/res/layout/activity_workout_done.xml
@@ -32,6 +32,7 @@
         android:text="Workout completed!"
         android:textSize="35sp"
         android:textStyle="bold"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
@@ -43,6 +44,7 @@
         android:layout_gravity="center"
         android:text="Time used: "
         android:textSize="20sp"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintEnd_toStartOf="@+id/workout_time"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Time"
         android:textSize="20sp"
-        android:textStyle="bold"
+        android:textColor="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/time_used_text"
         app:layout_constraintTop_toBottomOf="@id/workout_complete_text" />
@@ -66,6 +68,7 @@
         android:layout_marginTop="20dp"
         android:text="Fastest exercise: "
         android:textSize="18sp"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/time_used_text" />
@@ -76,6 +79,7 @@
         android:layout_height="wrap_content"
         android:text="fastest exercise name"
         android:textStyle="bold"
+        android:textColor="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fastest_exercise_name_text"/>
@@ -85,6 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="time"
+        android:textColor="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fastest_exercise_name" />
@@ -96,6 +101,7 @@
         android:layout_marginTop="20dp"
         android:text="Longest exercise: "
         android:textSize="18sp"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +113,7 @@
         android:layout_height="wrap_content"
         android:text="longest exercise name"
         android:textStyle="bold"
+        android:textColor="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/longest_exercise_name_text"/>
@@ -116,6 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="time"
+        android:textColor="@color/colorSecondaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/longest_exercise_name" />
@@ -126,10 +134,10 @@
         android:layout_height="40dp"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="20dp"
-        android:background="@color/colorRed"
+        android:background="@color/colorAccent"
         android:onClick="finishWorkout"
         android:text="finish"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorTextIcons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
