--- a/app/src/main/res/layout/list_custom_exercises.xml
+++ b/app/src/main/res/layout/list_custom_exercises.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryText"
                 android:text="Title"/>
 
             <TextView
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
+                android:textColor="@color/colorSecondaryText"
                 android:text="Body part"/>
 
             <TextView
@@ -44,6 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:textColor="@color/colorSecondaryText"
                 android:text="Sets"/>
 
             <TextView
@@ -51,6 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:textColor="@color/colorSecondaryText"
                 android:text="Reps"/>
 
         </LinearLayout>
