--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:spinnerMode="dropdown"
-                    android:popupBackground="@color/colorRed"/>
+                    android:popupBackground="@color/colorPrimary"/>
                 <!--popBackground is background color for the drop down menu-->
             </android.support.v7.widget.Toolbar>
 
