--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,10 +40,11 @@
             android:layout_marginStart="8dp"
             android:text="sign out"
             android:onClick="signOut"
+            android:background="@color/colorPrimaryLight"
+            android:textColor="@color/colorPrimaryText"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
