--- a/app/src/main/res/layout/spinner_category_item.xml
+++ b/app/src/main/res/layout/spinner_category_item.xml
@@ -7,6 +7,6 @@
     android:layout_height="wrap_content"
     android:textSize="20dp"
     android:text="dummy"
-    android:textColor="#FFFFFF"
+    android:textColor="@color/colorTextIcons"
     android:gravity="left"
     android:padding="5dp"/>
