--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
 
     <color name="colorRed">#fc0000</color>
     <color name="colorRedDark">#b90000</color>
+    <color name="colorBlue">#1b87e5</color>
 </resources>
