--- a/app/src/main/res/layout-land/activity_my_workout_info.xml
+++ b/app/src/main/res/layout-land/activity_my_workout_info.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--Made the "lines" on line 52 less, or else the delete FAB button would not look correct in landscape-->
             <EditText
                 android:id="@+id/selected_workout_desc"
                 android:layout_width="match_parent"
@@ -48,7 +49,7 @@
                 android:textSize="15sp"
                 android:maxLength="1000"
                 android:text="Workout Desc"
-                android:lines="5"/>
+                android:lines="2"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
