--- a/app/src/main/res/layout-land/activity_start_workout.xml
+++ b/app/src/main/res/layout-land/activity_start_workout.xml
@@ -46,7 +46,6 @@
                 android:layout_height="wrap_content"
                 android:text="Exercise Name"
                 android:textSize="20sp"
-                android:textStyle="bold"
                 android:textColor="@color/colorPrimaryText"
                 android:layout_gravity="center"/>
 
@@ -102,12 +101,6 @@
                 android:textSize="55sp"
                 android:layout_gravity="center"/>
 
-            <TextView
-                android:id="@+id/timer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="time"/>
-
             <Button
                 android:id="@+id/continue_button"
                 android:layout_width="100dp"
@@ -118,6 +111,11 @@
                 android:onClick="proceedInWorkout"
                 android:textColor="@color/colorTextIcons"
                 android:layout_gravity="bottom|center"/>
+
+            <TextView
+                android:id="@+id/timer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
