--- a/app/src/main/res/layout-land/fragment_create_custom_exercise.xml
+++ b/app/src/main/res/layout-land/fragment_create_custom_exercise.xml
@@ -79,8 +79,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 android:hint="Sets"
+                android:maxLength="2"
                 android:inputType="number"/>
 
             <EditText
@@ -88,8 +89,9 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 android:hint="Reps"
+                android:maxLength="2"
                 android:inputType="number"/>
 
 
