--- a/app/src/main/res/layout/activity_start_workout.xml
+++ b/app/src/main/res/layout/activity_start_workout.xml
@@ -28,7 +28,6 @@
             android:layout_height="wrap_content"
             android:text="Exercise Name"
             android:textSize="20sp"
-            android:textStyle="bold"
             android:textColor="@color/colorPrimaryText"
             android:layout_gravity="center"/>
 
@@ -98,7 +97,6 @@
     <TextView
         android:id="@+id/timer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="timer"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
